--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asttokens==2.4.1
 beautifulsoup4==4.12.3
 bs4==0.0.2
+category-encoders==2.6.4
 certifi==2024.8.30
 charset-normalizer==3.3.2
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
@@ -14,6 +16,7 @@ idna==3.10
 ipykernel==6.29.5
 ipython==8.28.0
 jedi==0.19.1
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
@@ -24,6 +27,7 @@ numpy==2.1.2
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
@@ -35,15 +39,21 @@ Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pywin32==308
 pyzmq==26.2.0
 requests==2.32.3
+scikit-learn==1.5.1
 scipy==1.14.1
 seaborn==0.13.2
+setuptools==72.1.0
 six==1.16.0
 soupsieve==2.6
 stack-data==0.6.3
+statsmodels==0.14.4
+threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
 tzdata==2024.2
 urllib3==2.2.3
 wcwidth==0.2.13
+wheel==0.43.0
