Columnas renombradas y cambio de funcion

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==308
+# pywin32==308
 pyzmq==26.2.0
 requests==2.32.3
 scikit-learn==1.5.1
